// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` Link Should match the dark snapshot 1`] = `
.c0 {
  color: #e0e0e0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  cursor: pointer;
}

.c0:hover {
  color: #ffffff;
}

.c0:visited {
  color: #e0e0e0;
}

<Link
  href="_blank"
  rel="noreferrer"
  skin="dark"
  theme={
    Object {
      "colors": Object {
        "error": Object {
          "100": "#fff5f5",
          "300": "#f88e86",
          "500": "#ec584e",
          "700": "#e91b0c",
          "900": "#ac001a",
        },
        "neutral": Object {
          "0": "#ffffff",
          "100": "#f2f2f2",
          "1000": "#000000",
          "300": "#e0e0e0",
          "500": "#999999",
          "700": "#424242",
          "900": "#191919",
        },
        "primary": Object {
          "100": "#E5EDFC",
          "300": "#89AAE7",
          "500": "#0CC0EA",
          "700": "#1250C4",
          "900": "#002F7B",
        },
        "secondary": Object {
          "100": "#F7B0C8",
          "300": "#F278A1",
          "500": "#E91E63",
          "700": "#DE0059",
          "900": "#9E003F",
        },
        "success": Object {
          "100": "#dcedc8",
          "300": "#c9eda2",
          "500": "#7ed321",
          "700": "#3b610f",
          "900": "#004D40",
        },
        "warning": Object {
          "100": "#ffefd6",
          "300": "#ffda6a",
          "500": "#ffc107",
          "700": "#f09100",
          "900": "#d14900",
        },
      },
    }
  }
  underline={true}
>
  <Link__StyledLink
    href="_blank"
    rel="noreferrer"
    skin="dark"
    theme={
      Object {
        "colors": Object {
          "error": Object {
            "100": "#fff5f5",
            "300": "#f88e86",
            "500": "#ec584e",
            "700": "#e91b0c",
            "900": "#ac001a",
          },
          "neutral": Object {
            "0": "#ffffff",
            "100": "#f2f2f2",
            "1000": "#000000",
            "300": "#e0e0e0",
            "500": "#999999",
            "700": "#424242",
            "900": "#191919",
          },
          "primary": Object {
            "100": "#E5EDFC",
            "300": "#89AAE7",
            "500": "#0CC0EA",
            "700": "#1250C4",
            "900": "#002F7B",
          },
          "secondary": Object {
            "100": "#F7B0C8",
            "300": "#F278A1",
            "500": "#E91E63",
            "700": "#DE0059",
            "900": "#9E003F",
          },
          "success": Object {
            "100": "#dcedc8",
            "300": "#c9eda2",
            "500": "#7ed321",
            "700": "#3b610f",
            "900": "#004D40",
          },
          "warning": Object {
            "100": "#ffefd6",
            "300": "#ffda6a",
            "500": "#ffc107",
            "700": "#f09100",
            "900": "#d14900",
          },
        },
      }
    }
    underline={true}
  >
    <a
      className="c0"
      href="_blank"
      rel="noreferrer"
    >
      Link
    </a>
  </Link__StyledLink>
</Link>
`;

exports[` Link Should match the default snapshot 1`] = `
.c0 {
  color: #1250C4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  cursor: pointer;
}

.c0:hover {
  color: #DE0059;
}

.c0:visited {
  color: #5734BA;
}

<Link
  href="_blank"
  rel="noreferrer"
  skin="default"
  theme={
    Object {
      "colors": Object {
        "error": Object {
          "100": "#fff5f5",
          "300": "#f88e86",
          "500": "#ec584e",
          "700": "#e91b0c",
          "900": "#ac001a",
        },
        "neutral": Object {
          "0": "#ffffff",
          "100": "#f2f2f2",
          "1000": "#000000",
          "300": "#e0e0e0",
          "500": "#999999",
          "700": "#424242",
          "900": "#191919",
        },
        "primary": Object {
          "100": "#E5EDFC",
          "300": "#89AAE7",
          "500": "#0CC0EA",
          "700": "#1250C4",
          "900": "#002F7B",
        },
        "secondary": Object {
          "100": "#F7B0C8",
          "300": "#F278A1",
          "500": "#E91E63",
          "700": "#DE0059",
          "900": "#9E003F",
        },
        "success": Object {
          "100": "#dcedc8",
          "300": "#c9eda2",
          "500": "#7ed321",
          "700": "#3b610f",
          "900": "#004D40",
        },
        "warning": Object {
          "100": "#ffefd6",
          "300": "#ffda6a",
          "500": "#ffc107",
          "700": "#f09100",
          "900": "#d14900",
        },
      },
    }
  }
  underline={true}
>
  <Link__StyledLink
    href="_blank"
    rel="noreferrer"
    skin="default"
    theme={
      Object {
        "colors": Object {
          "error": Object {
            "100": "#fff5f5",
            "300": "#f88e86",
            "500": "#ec584e",
            "700": "#e91b0c",
            "900": "#ac001a",
          },
          "neutral": Object {
            "0": "#ffffff",
            "100": "#f2f2f2",
            "1000": "#000000",
            "300": "#e0e0e0",
            "500": "#999999",
            "700": "#424242",
            "900": "#191919",
          },
          "primary": Object {
            "100": "#E5EDFC",
            "300": "#89AAE7",
            "500": "#0CC0EA",
            "700": "#1250C4",
            "900": "#002F7B",
          },
          "secondary": Object {
            "100": "#F7B0C8",
            "300": "#F278A1",
            "500": "#E91E63",
            "700": "#DE0059",
            "900": "#9E003F",
          },
          "success": Object {
            "100": "#dcedc8",
            "300": "#c9eda2",
            "500": "#7ed321",
            "700": "#3b610f",
            "900": "#004D40",
          },
          "warning": Object {
            "100": "#ffefd6",
            "300": "#ffda6a",
            "500": "#ffc107",
            "700": "#f09100",
            "900": "#d14900",
          },
        },
      }
    }
    underline={true}
  >
    <a
      className="c0"
      href="_blank"
      rel="noreferrer"
    >
      Link
    </a>
  </Link__StyledLink>
</Link>
`;

exports[` Link Should match the default snapshot without underline 1`] = `
.c0 {
  color: #e0e0e0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c0:hover {
  color: #ffffff;
}

.c0:visited {
  color: #e0e0e0;
}

<Link
  href="_blank"
  rel="noreferrer"
  skin="dark"
  theme={
    Object {
      "colors": Object {
        "error": Object {
          "100": "#fff5f5",
          "300": "#f88e86",
          "500": "#ec584e",
          "700": "#e91b0c",
          "900": "#ac001a",
        },
        "neutral": Object {
          "0": "#ffffff",
          "100": "#f2f2f2",
          "1000": "#000000",
          "300": "#e0e0e0",
          "500": "#999999",
          "700": "#424242",
          "900": "#191919",
        },
        "primary": Object {
          "100": "#E5EDFC",
          "300": "#89AAE7",
          "500": "#0CC0EA",
          "700": "#1250C4",
          "900": "#002F7B",
        },
        "secondary": Object {
          "100": "#F7B0C8",
          "300": "#F278A1",
          "500": "#E91E63",
          "700": "#DE0059",
          "900": "#9E003F",
        },
        "success": Object {
          "100": "#dcedc8",
          "300": "#c9eda2",
          "500": "#7ed321",
          "700": "#3b610f",
          "900": "#004D40",
        },
        "warning": Object {
          "100": "#ffefd6",
          "300": "#ffda6a",
          "500": "#ffc107",
          "700": "#f09100",
          "900": "#d14900",
        },
      },
    }
  }
  underline={false}
>
  <Link__StyledLink
    href="_blank"
    rel="noreferrer"
    skin="dark"
    theme={
      Object {
        "colors": Object {
          "error": Object {
            "100": "#fff5f5",
            "300": "#f88e86",
            "500": "#ec584e",
            "700": "#e91b0c",
            "900": "#ac001a",
          },
          "neutral": Object {
            "0": "#ffffff",
            "100": "#f2f2f2",
            "1000": "#000000",
            "300": "#e0e0e0",
            "500": "#999999",
            "700": "#424242",
            "900": "#191919",
          },
          "primary": Object {
            "100": "#E5EDFC",
            "300": "#89AAE7",
            "500": "#0CC0EA",
            "700": "#1250C4",
            "900": "#002F7B",
          },
          "secondary": Object {
            "100": "#F7B0C8",
            "300": "#F278A1",
            "500": "#E91E63",
            "700": "#DE0059",
            "900": "#9E003F",
          },
          "success": Object {
            "100": "#dcedc8",
            "300": "#c9eda2",
            "500": "#7ed321",
            "700": "#3b610f",
            "900": "#004D40",
          },
          "warning": Object {
            "100": "#ffefd6",
            "300": "#ffda6a",
            "500": "#ffc107",
            "700": "#f09100",
            "900": "#d14900",
          },
        },
      }
    }
    underline={false}
  >
    <a
      className="c0"
      href="_blank"
      rel="noreferrer"
    >
      Link
    </a>
  </Link__StyledLink>
</Link>
`;
